docs: add man page for freeboxvm and install rule
- Add a new manual page (man/man1/freeboxvm.1) documenting all
  commands, options, and examples for the `freeboxvm` CLI.

- Update pyproject.toml to install the man page under share/man/man1.

Signed-off-by: Laurent Vivier <laurent@vivier.eu>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ freeboxvm = "freeboxvm:main"
 [tool.setuptools]
 package-dir = {"" = "src"}
 py-modules = ["freeboxvm", "freeboxvm_version"]
+include-package-data = true
+
+[tool.setuptools.data-files]
+"share/man/man1" = ["man/man1/freeboxvm.1"]
 
 [tool.setuptools.dynamic]
 version = { attr = "freeboxvm_version.__version__" }
